--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/json"]
 	path = bundle/json
 	url = git://github.com/leshill/vim-json.git
+[submodule "JavaScript-Indent"]
+	path = JavaScript-Indent
+	url = git://github.com/vim-scripts/JavaScript-Indent.git
