Revert "Removed Javascript-Indent"
This reverts commit 938afc6ed427041a42bfb41e58ddb4a99fb951ef.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "bundle/php"]
 	path = bundle/php
 	url = git://github.com/vim-scripts/php.vim--Hodge.git
+[submodule "bundle/JavaScript-Indent"]
+	path = bundle/JavaScript-Indent
+	url = git://github.com/vim-scripts/JavaScript-Indent.git
