--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = git://github.com/juvenn/mustache.vim.git
 [submodule "bundle/Command-T"]
 	path = bundle/Command-T
-	url = git@github.com:wincent/Command-T
+	url = https://github.com/wincent/Command-T.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
